Closed Bug 1543970 Opened 7 years ago Closed 7 years ago

We can probably stop attempting to remove the startup cache from the previous location now that it's been 6 years

Categories

(Core :: XPCOM, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla68
Tracking Status
firefox68 --- fixed

People

(Reporter: Gijs, Assigned: Gijs)

References

(Blocks 1 open bug)

Details

(Keywords: main-thread-io, perf, Whiteboard: [fxperf:p1])

Attachments

(1 file)

https://searchfox.org/mozilla-central/rev/6dab6dad9cc852011a14275a8b2c2c03ed7600a7/startupcache/StartupCache.cpp#155-167

This code landed in Feb 2013, and I expect that for 99.9999999999% of users this is just a waste of time that no-ops because the file doesn't exist.

Pushed by gijskruitbosch@gmail.com: https://hg.mozilla.org/integration/autoland/rev/c78a681b16f9 give up removing the startup cache file from the previous profile location after 6 years, r=froydnj
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla68
Blocks: 1543096
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: