Bug 1543970 - give up removing the startup cache file from the previous profile location after 6 years, r=froydnj

Differential Revision: https://phabricator.services.mozilla.com/D27280