startupcache/StartupCache.cpp
@@ -152,20 +152,6 @@ nsresult StartupCache::Init() {
       return rv;
     }
 
-    nsCOMPtr<nsIFile> profDir;
-    NS_GetSpecialDirectory("ProfDS", getter_AddRefs(profDir));
-    if (profDir) {
-      bool same;
-      if (NS_SUCCEEDED(profDir->Equals(file, &same)) && !same) {
-        // We no longer store the startup cache in the main profile
-        // directory, so we should cleanup the old one.
-        if (NS_SUCCEEDED(
-                profDir->AppendNative(NS_LITERAL_CSTRING("startupCache")))) {
-          profDir->Remove(true);
-        }
-      }
-    }
-
     rv = file->AppendNative(NS_LITERAL_CSTRING("startupCache"));
     NS_ENSURE_SUCCESS(rv, rv);
 
